[package]
name = "now-exporter"
version = "0.1.0"
edition = "2018"
authors = ["The now-collector Authors <oss@nyantec.com>"]
description = "A service that retains the latest state of data from various sources"
license = "MirOS"

[dependencies]
miniz_oxide = "0.5"
log = "0.4"
serde_json = "1.0"
serde = "1.0"

[dependencies.tokio]
version = "1.13"
features = ["net"]
